fix: md preview checkboxes stuck in dark mode" "

--- a/src/components/markdown/markdownOverrides.styles.css
+++ b/src/components/markdown/markdownOverrides.styles.css
@@ -16,6 +16,7 @@
   /* hover: background*/
   /* if need transparency, delete this, add hover:!bg-bg-row-selected/40 to rerender button className */
   --color-neutral-muted: var(--color-bg-background) !important;
+  color-scheme: inherit !important;
 }
 
 .mdEdit123 .w-md-editor-toolbar {
